--- a/slides/index.html
+++ b/slides/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Everest Bio</title>
+    <title>INEDIT WP-6</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Fabio Cruz / Mauricio Camargo" />
-    <script src="libs/header-attrs-2.5.2/header-attrs.js"></script>
+    <meta name="author" content="Fabio Cruz" />
+    <script src="libs/header-attrs-2.5.3/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <script src="libs/clipboard-2.0.6/clipboard.min.js"></script>
     <link href="libs/shareon-1.4.1/shareon.min.css" rel="stylesheet" />
@@ -18,30 +18,57 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Everest Bio
-## <p><strong>ÉV</strong>aluation du r<strong>É</strong>seau de <strong>RE</strong>cyclage pour <strong>S</strong>outenir la <strong>T</strong>ransition vers une <strong>BIO</strong>économie <br/> Projet de recherche CREIDD et ERPI</p>
-### Fabio Cruz / Mauricio Camargo
-### CREIDD, ERPI
-### 2020/11/18 (updated: 2020-11-17)
+# INEDIT WP-6
+## <p>Open <strong>IN</strong>novation <strong>E</strong>cosystems for <strong>D</strong>o-<strong>I</strong>t-<strong>T</strong>ogether process <br/> Projet de recherche ERPI</p>
+### Fabio Cruz
+### ERPI
+### 2020/11/18 (updated: 2020-12-09)
 
 ---
 
 
 
 
+# Global Planning WP6
+
+&lt;img src="../figures/Gantt/WP6/Planning.svg" width="2000" height="450" /&gt;
 
 
-## The problem: Plastic waste
+---
+# Goals of the WP
+
+- Implement the consumer-driven DIT process within the four use cases
+- Validate the INEDIT process specifications
+- Experiment and validate the result
+- Identify potential gender issues and insights to overcome them
+
+
+---
+## Task 6.4: 3D printing of recycled plastic demonstrator 
+### [TL: UL. Participants: CROWD, TTPSC]
+
+&gt; The main goal of this task is to validate the logistical and technical feasibility of recycled assets to be used in the DIT approach. These two elements will be implemented in relevant environment in order to prove the integration of a distributed and local plastic recycling chain around OMDF. This integration will be validated according the KPI. UL will develop the recycling pilot platform based on open design approach in order to be replicable to other countries
+
+
+**Delivrable 6.4:** 3D printing of recycled plastic demonstrator .content-box-yellow[Deadline. Jul 2022]
+
+
+---
+background-image: url("../figures/Gantt/Task6-4/Planning.svg")
+background-size: contain
+
+
+## Planning WP6 - Task 6.4
+
+
+
+
+---
+
+# Smart Collector
 
 .pull-left[ 
-- US recycled less than 9% of its plastic waste.
-- EU, recycled about 30%. However, this number is what is collected, not from what is in circulation*. 
-- China’s ban on plastic trash
-- Plastic trash could top 13 billion tons by 2050
-- Economics of plastic recycling historically have been challenging
-- Little financial incentive to encourage consumers to recycle their own plastic waste
-
-## We barely recycle plastic!!.. 
+- To create a local network collection for puntual plastic material. 
 ]
 
 
@@ -54,162 +81,33 @@ class: center, middle, inverse, title-slide
 *Kranzinger, L., Pomberger, R., Schwabl, D., Flachberger, H., Bauer, M., Lehner, M., Hofer, W., 2018. Output-oriented analysis of the wet mechanical processing of polyolefin-rich waste for feedstock recycling. Waste Manag. Res. 36, 445–453
 ]
 
-
 ---
 
-# Challengue
+# Gigabot
 
-The development of sustainable industrial supply chains
-
-.left-column[
-.small[
-
-- Only technico-economic criteria alone do not (no longer) enables a informed decision making 
-
-- Need to assess value chains in a different way, including actual impacts on ecosystems
-
-- A more holistic vision is needed to assess the feasibility of these new sectors.
-]
- ]
-
-.right-column[ 
-.polaroid[ ![](figures/Recycling.png) ]
+.pull-left[ 
+- Print big
 ]
 
----
-
-# Towards a local distributed recycling approach
-
-
-.pull-left[
-- Local closed loop
-- AM adds value
-- Small quantities 
-- Reduction of landfilling
-- Minimize the use of virgin materials
-
-![](figures/Green-fablab-1.jpg)
-
-]
-
-.pull-right[
-
-![](http://lf2l.fr/assets/images/3-projects/gf/Logo-GF.png)
-http://lf2l.fr/projects/green-fablab
-
-.center[![:scale 80%](figures/Green-fablab-circuit.png)]
-
+.pull-right[ 
+![Plastic waste](https://images.unsplash.com/photo-1537084642907-629340c7e59c?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1567&amp;q=80)
 ]
 
 
 
 ---
 
+# Hangprinter? 
 
-## Distributed recycling via additive manufacturing (DRAM)
-Technical system
-
-.center[![:scale 75%](figures/Green-fablab-0.png)]
-
-
-.footnote[
-Cruz Sanchez, F.A., Boudaoud, H., Camargo, M., Pearce, J.M., 2020. Plastic recycling in additive manufacturing: A systematic literature review and opportunities for the circular economy. J. Clean. Prod. 264, 121602. https://doi.org/10.1016/j.jclepro.2020.121602 
-]
 
 ---
 
-## Distributed recycling via additive manufacturing (DRAM)
-Technical system --&gt; Global system
-
-.center[![:scale 75%](figures/DRAM-05.png)]
-
----
-
-## Distributed recycling via additive manufacturing (DRAM)
-
-Taking into account the environment and their ecosystem services (ES).
-
-.pull-left[
-![:scale 90%](figures/Eco-Services-00.jpg)
-]
-
---
-
-.pull-right[
-![](figures/Eco-Services-01.png)
-
-- How the future recycling chain could be including the environment?
-]
-
-
-.footnote[
-Bruel, A., Kronenberg, J., Troussier, N., &amp; Guillaume, B. (2019). Linking industrial ecology and ecological economics: A theoretical and empirical foundation for the circular economy. Journal of Industrial Ecology, 23(1), 12-21.
-]
-
----
-
-
-# Main Goals
-
-- To develop a generic methodology to assess the ecosystem services rendered by industrial activities operating in short circuit in order to improve decision-making by industrial and public actors. 
-
-- Validation on the case of a short-circuit plastic recycling chain.
-
----
-
-# Methods
-
-- In line with the thesis work previously carried out by the two teams, development of a coupled Systems Dynamics and LCA approach. 
-
-- Application on a case study, the GreenFablab, by evaluating its environmental impact when setting up a short plastic recycling circuit.
-
-.center[ ![:scale 80%](figures/Goals.png)]
-
----
-
-# Distributed recycling via additive manufacturing (DRAM)
-
-Global system
-
-.pull-left[
-![](figures/DRAM-07.png)
-]
-
-.pull-right[
-- Establish and evaluate scenarios in a systemic and dynamic way
-
-- Evaluate the influences of the main operating variables on the system
-
-- Taking into account the priorities of the multiple stakeholders
-
-- Facilitate your decision making public-private actors
-]
-.footnote[
-Santander, P., Cruz Sanchez, F.A., Boudaoud, H., Camargo, M., 2020. Closed loop supply chain network for local and distributed plastic recycling for 3D printing: a MILP-based optimization approach. Resour. Conserv. Recycl. 154, 104531. https://doi.org/10.1016/j.resconrec.2019.104531 
-]
-
----
-
-# Delivrables
-
-1. An article in an indexed international journal
-2. Participation in an international conference 
-3. An operational model with a model of a software tool for assessing local impacts
-4. Final report on the evaluation of Green Fablab and possible generalisations for short industrial circuits.
-
----
-
-# Valorisations
-
-- Method and prototype of a tool for the evaluation of local impacts of circular production systems
-
----
 class: middle, center
 
 
 Thanks !
 
-![:scale 70%](figures/DRAM-bd.png)
+
 
 
 
