--- a/slides/index.html
+++ b/slides/index.html
@@ -1,64 +1,157 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>INEDIT WP-6</title>
+    <title>T6.4 3D printing of recycled plastic demonstrator</title>
     <meta charset="utf-8" />
     <meta name="author" content="Fabio Cruz" />
-    <script src="libs/header-attrs-2.5.3/header-attrs.js"></script>
-    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <script src="libs/clipboard-2.0.6/clipboard.min.js"></script>
-    <link href="libs/shareon-1.4.1/shareon.min.css" rel="stylesheet" />
-    <script src="libs/shareon-1.4.1/shareon.min.js"></script>
-    <link href="libs/xaringanExtra-shareagain-0.2.4/shareagain.css" rel="stylesheet" />
-    <script src="libs/xaringanExtra-shareagain-0.2.4/shareagain.js"></script>
-    <link rel="stylesheet" href="assets/Fabio.css" type="text/css" />
-    <link rel="stylesheet" href="assets/Fabio-fonts.css" type="text/css" />
+    <script src="index_files/header-attrs/header-attrs.js"></script>
+    <link href="index_files/panelset/panelset.css" rel="stylesheet" />
+    <script src="index_files/panelset/panelset.js"></script>
+    <link rel="stylesheet" href="assets/xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="assets/INEDIT.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
-class: center, middle, inverse, title-slide
 
-# INEDIT WP-6
-## <p>Open <strong>IN</strong>novation <strong>E</strong>cosystems for <strong>D</strong>o-<strong>I</strong>t-<strong>T</strong>ogether process <br/> Projet de recherche ERPI</p>
-### Fabio Cruz
-### ERPI
-### 2020/11/18 (updated: 2020-12-09)
+
+
+
+
+
+
+class: title-slide, left, bottom
+
+
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Logos/ERPI//UL-ERPI.png" width="250px" style="display: block; margin: auto 0 auto auto;" /&gt;
+
+
+<svg aria-hidden="true" role="img" viewBox="0 0 384 512" style="height:1em;width:0.75em;vertical-align:-0.125em;margin-right:0.2em;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"/></svg> March, 2021 - INEDIT Monthly meeting – virtual seminar
+
+# <svg aria-hidden="true" role="img" viewBox="0 0 512 512" style="height:1em;width:1em;vertical-align:-0.125em;margin-right:0.2em;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M256 32C114.6 32 0 125.1 0 240c0 49.6 21.4 95 57 130.7C44.5 421.1 2.7 466 2.2 466.5c-2.2 2.3-2.8 5.7-1.5 8.7S4.8 480 8 480c66.3 0 116-31.8 140.6-51.4 32.7 12.3 69 19.4 107.4 19.4 141.4 0 256-93.1 256-208S397.4 32 256 32z"/></svg>  T6.4 3D printing of recycled plastic demonstrator 
+
+<svg aria-hidden="true" role="img" viewBox="0 0 640 512" style="height:1em;width:1.25em;vertical-align:-0.125em;margin-right:0.2em;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M192 256c61.9 0 112-50.1 112-112S253.9 32 192 32 80 82.1 80 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C51.6 288 0 339.6 0 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zM480 256c53 0 96-43 96-96s-43-96-96-96-96 43-96 96 43 96 96 96zm48 32h-3.8c-13.9 4.8-28.6 8-44.2 8s-30.3-3.2-44.2-8H432c-20.4 0-39.2 5.9-55.7 15.4 24.4 26.3 39.7 61.2 39.7 99.8v38.4c0 2.2-.5 4.3-.6 6.4H592c26.5 0 48-21.5 48-48 0-61.9-50.1-112-112-112z"/></svg> Université de Lorraine - ERPI - France
+
 
 ---
 
 
 
 
-# Global Planning WP6
+<div>
+<style type="text/css">.xaringan-extra-logo {
+width: 100%;
+height: 100%;
+z-index: 0;
+background-image: url(https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/background.svg);
+background-size: contain;
+background-repeat: no-repeat;
+position: absolute;
+top:0em;right:0em;
+}
+</style>
+<script>(function () {
+  let tries = 0
+  function addLogo () {
+    if (typeof slideshow === 'undefined') {
+      tries += 1
+      if (tries < 10) {
+        setTimeout(addLogo, 100)
+      }
+    } else {
+      document.querySelectorAll('.remark-slide-content:not(.title-slide):not(.inverse):not(.hide_logo)')
+        .forEach(function (slide) {
+          const logo = document.createElement('div')
+          logo.classList = 'xaringan-extra-logo'
+          logo.href = null
+          slide.appendChild(logo)
+        })
+    }
+  }
+  document.addEventListener('DOMContentLoaded', addLogo)
+})()</script>
+</div>
 
-&lt;img src="../figures/Gantt/WP6/Planning.svg" width="2000" height="450" /&gt;
 
 
----
-# Goals of the WP
+# Goals the WP-6
 
+.pull-left-2[
 - Implement the consumer-driven DIT process within the four use cases
 - Validate the INEDIT process specifications
 - Experiment and validate the result
 - Identify potential gender issues and insights to overcome them
 
-
----
 ## Task 6.4: 3D printing of recycled plastic demonstrator 
-### [TL: UL. Participants: CROWD, TTPSC]
 
-&gt; The main goal of this task is to validate the .content-box-yellow[logistical and technical feasibility of recycled assets] to be used in the DIT approach. These two elements will be implemented in relevant environment in order to prove the integration of a distributed and local plastic recycling chain around OMDF. This integration will be validated according the KPI. UL will develop the recycling pilot platform based on open design approach in order to be replicable to other countries
+**TL: UL. Participants: CROWD, TTPSC**
 
 
-**Delivrable 6.4:** 3D printing of recycled plastic demonstrator .content-box-yellow[Deadline. Jul 2022]
+&gt; The main goal of this task is to validate the .bg-green[logistical and technical feasibility of recycled assets] to be used in the DIT approach. These two elements will be implemented in relevant environment in order to prove the integration of a distributed and local plastic recycling chain around OMDF. This integration will be validated according the KPI. UL will develop the recycling pilot platform based on open design approach in order to be replicable to other countries
+
+
+**Delivrable 6.4:** 3D printing of recycled plastic demonstrator .bg-yellow[Deadline. Jul 2022]
+
+]
+.pull-right-1[
+
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Gigabot/Gigabot-05.jpg" width="90%" style="display: block; margin: auto;" /&gt;
+]
 
 
 ---
-background-image: url("../figures/Gantt/Task6-4/Planning.svg")
-background-size: contain
+
+# Planning Task 6.4:
 
 
-## Planning WP6 - Task 6.4
+&lt;img src="index_files/figure-html/unnamed-chunk-3-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+
+---
+class: middle
+
+# Agenda for Meeting  15 May, 2021
+
+.grey_Inedit[
+1. .large.blue[**Coordination and alignement with WP 4.3-4.4**]
+1. .large.blue[**Literature and Background on Additive manufacturing / Recycling / Sustainability**]
+1. Printability test on Virgin material for calibration purposes
+1. Iterative technical improvement of printing process
+1. Definition of the scope of plastic wastes according printability 
+1. Experimental research design to test quality on virgin and recycled objects
+1. .large.blue[**Technical development of smart collector to collect plastic waste**]
+1. Validation and consolidation of network of the local actors
+1. Validation Demonstrator for INEDIT stakeholders (according KPI's?)
+      ]   
+
+
+
+---
+class:  middle center inverse
+
+# .Large[1) Coordination and alignement with WP 4.3-4.4 ]
+
+---
+
+## Coordination and alignement with WP 4.3-4.4 tasks
+
+UL OMDF (communities, Co-design, Gigabot X &amp; more) : T4.3, T4.4  &amp; WP6 
+
+
+&lt;img src="figures/T6_1/Task-4_1-00.png" width="90%" style="display: block; margin: auto;" /&gt;
+
+---
+
+## Others connectionds...
+
+---
+
+class:  middle center inverse
+
+# .Large[2) Literature and Background on Additive manufacturing / Recycling / Sustainability ]
+
+---
+
+
+# .Large[2) Technical development of smart collector to collect plastic waste
 
 
 
@@ -73,7 +166,7 @@ background-size: contain
 
 
 .pull-right[ 
-![Plastic waste](https://images.unsplash.com/photo-1537084642907-629340c7e59c?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1567&amp;q=80)
+ss
 ]
 
 
@@ -84,29 +177,7 @@ background-size: contain
 
 ---
 
-background-image: url("../figures/Test/SM/Diapositive4.jpeg")
-background-size: contain
-
----
-
-background-image: url("../figures/Test/SM/Diapositive5.jpeg")
-background-size: contain
-
----
-
-background-image: url("../figures/Test/SM/Diapositive6.jpeg")
-background-size: contain
-
----
-
-background-image: url("../figures/Test/SM/Diapositive7.jpeg")
-background-size: contain
-
----
-
-
-background-image: url("../figures/Test/SM/Diapositive8.jpeg")
-background-size: contain
+Technical development of smart collector to collect plastic waste
 
 ---
 
@@ -118,11 +189,7 @@ background-size: contain
 
 ---
 
-background-image: url("../figures/Test/SM/Diapositive9.jpeg")
-background-size: contain
 
-
----
 
 # Hangprinter? 
 
@@ -141,12 +208,14 @@ Thanks !
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script src="assets/macros.js"></script>
 <script>var slideshow = remark.create({
-"ratio": "16:9",
 "highlightStyle": "github",
 "highlightLines": true,
-"countIncrementalSlides": false
+"ratio": "16:9",
+"countIncrementalSlides": true,
+"navigation": {
+"scroll": false
+}
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
