poniendo cosas al dia

--- a/slides/index.html
+++ b/slides/index.html
@@ -132,7 +132,7 @@ class: middle
 ---
 class:  middle center inverse
 
-# .Large[1) Coordination and alignement with WP 4.3-4.4 ]
+# 1) Coordination and alignement with WP 4.3-4.4 ]
 
 .white.left[
 ### Main Goal: To map elements from WP4 
