--- a/slides/index.html
+++ b/slides/index.html
@@ -162,9 +162,18 @@ UL OMDF (communities, Co-design, Gigabot X &amp; more) : T4.3, T4.4  &amp; WP6
 
 &lt;img src="figures/T6_1/Task-4_1-00.png" width="90%" style="display: block; margin: auto;" /&gt;
 
-
 ---
 
+## Coordination and alignement with WP 4.3-4.4 tasks
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/Task-4.3/Task.jpg" alt=" " width="100%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
+
+Work in progress  13 October, 2021
+
+---
 class:  middle center inverse
 
 #  2) Literature and Background on Additive manufacturing / Recycling / Sustainability 
@@ -246,7 +255,7 @@ class:  middle center inverse
 
 ## Printability test on Virgin material for calibration purposes
 
-.pull-left-2[
+.pull-left[
 
 Working test for March – September 2021
 
@@ -255,9 +264,36 @@ Working test for March – September 2021
 - Fabrication of printing samples to evaluate the quality  considering the INEDIT project conditions.
 - Documentation of the test as scientific rapport defining the machine, protocol, user experience and the implications for DRAM. 
 –
+]
+
+.pull-right[
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/gigabot/GB-00.jpg" alt=" " width="70%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
 
 ]
 
+---
+
+## Printability test on Virgin material for calibration purposes
+
+.pull-left[
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/gigabot/Swapnil-DOE-00.jpg" alt=" " width="65%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
+
+]
+
+.pull-right[
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/gigabot/Swapnil-DOE-01.jpg" alt=" " width="100%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
+
+]
 ---
 exclude: true
 class:  middle center inverse
@@ -303,41 +339,42 @@ class:  middle center inverse
 
 ---
 
+
 ## Smart Collector
 
-.pull-left[ 
-- To create a local network collection for puntual plastic material. 
-]
-
-
-.pull-right[ 
-
-]
-
-
-.footnote[
-*Kranzinger, L., Pomberger, R., Schwabl, D., Flachberger, H., Bauer, M., Lehner, M., Hofer, W., 2018. Output-oriented analysis of the wet mechanical processing of polyolefin-rich waste for feedstock recycling. Waste Manag. Res. 36, 445–453
-]
-
-
----
-
-Technical development of smart collector to collect plastic waste
-
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/smart-collector/SM-02.jpg" alt=" " width="100%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
 
 ---
 
 
+## Smart Collector
+
+.pull-left[
+- To create a local network collection for punctual plastic material. 
+]
+
+.pull-right[
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/smart-collector/SM-00.jpg" alt=" " width="70%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
+]
+
+Protyping a dashboard: http://grafana.lf2l.fr/dashboard/snapshot/qE20JzmxdSGXNDEaAwPpqgQBvr18ps1d?orgId=1
+
 
 
 
 
 ---
-
 class: middle, center
 
 
-Thanks !
+# Thanks !
+
 
 
 
