--- a/xar-WP6/index.html
+++ b/xar-WP6/index.html
@@ -28,11 +28,6 @@
 
 
 
-
-
-
-
-
 class: title-slide, left, bottom
 
 
@@ -118,15 +113,92 @@ The main goal of this task is to validate the .bg-green[logistical and technical
 
 ---
 
+# Pitch my devs ! 
+
+.pull-left-1[
+
+
+**Tasks in DOA:**
+
+- Task 6.4 3D printing of recycled plastic demonstrator
+
+**What is our target :**
+
+- To be able to print recycled printed parts for personalized furniture from usable plastic waste collected locally.
+
+**What we have Done so far:**
+
+- .yellow[Create a V1.1 of the collector.]
+- Printability test for fused granular Fabrication
+
+**What are the next steps:**
+
+- .yellow[Create a dashboard for smart collectors]
+- Printability test from recycled PLA 
+
+
+
+
+]
+
+.pull-right-2[
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/smart-collector/SM-Concept.jpg" alt=" " width="90%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
+
+]
+
+---
+
+# Pitch my devs ! 
+
+.pull-left-1[
+
+
+**Tasks in DOA:**
+
+- Task 6.4 3D printing of recycled plastic demonstrator
+
+**What is our target :**
+
+- To be able to print recycled printed parts for personalized furniture from usable plastic waste collected locally.
+
+**What we have Done so far:**
+
+- Create a V1.1 of the collector.
+- .yellow[Printability test for fused granular Fabrication]
+
+**What are the next steps:**
+
+- Create a dashboard for smart collectors
+- .yellow[Printability test from recycled PLA] 
+
+]
+
+.pull-right-2[
+
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/gigabot/Results-00.jpg" alt=" " width="90%" /&gt;
+&lt;p class="caption"&gt; &lt;/p&gt;
+&lt;/div&gt;
+
+]
+
+
+---
+
 # Planning Task 6.4:
 
 
-&lt;img src="index_files/figure-html/unnamed-chunk-4-1.png" width="100%" style="display: block; margin: auto;" /&gt;
+&lt;img src="index_files/figure-html/unnamed-chunk-5-1.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 ---
+
 class: middle
 
-# Agenda for Meeting  01 November, 2021
+# Agenda for Meeting  02 November, 2021
 
 .grey_Inedit[
 1. .large.bg-yellow[**Coordination and alignement with WP 4.3-4.4**]
@@ -184,7 +256,7 @@ UL OMDF (communities, Co-design, Gigabot X &amp; more) : T4.3, T4.4  &amp; WP6
 &lt;p class="caption"&gt; &lt;/p&gt;
 &lt;/div&gt;
 
-Work in progress  01 November, 2021
+Work in progress  02 November, 2021
 
 ---
 class:  middle center inverse
