--- a/xar-WP6/index.html
+++ b/xar-WP6/index.html
@@ -164,7 +164,9 @@ INEDIT demonstrates the potential innovation of .bg-yellow[Social Manufacturing 
 
 
 ---
-
+background-image: url("https://erpi.univ-lorraine.fr/assets/images/people/Alex-Gabriel.jpg")
+background-position: 40% 20%
+background-size: 110px
 
 ## Equipe
 
@@ -203,6 +205,8 @@ INEDIT demonstrates the potential innovation of .bg-yellow[Social Manufacturing 
 
 **Brunelle Marche**
 ]
+
+
 
 .pull-right[
 
@@ -275,6 +279,7 @@ background-size: 30%
 
 Jiang, P., Leng, J., Ding, K., Gu, P., Koren, Y., 2016. Social manufacturing as a sustainable paradigm for mass individualization. Proc. Inst. Mech. Eng. Part B J. Eng. Manuf. 230, 1961–1968. https://doi.org/10.1177/0954405416666903
 ]
+
 ---
 
 ## Definition DIT
@@ -730,7 +735,7 @@ class:  middle center inverse
 
 .pull-right[
 &lt;div class="figure" style="text-align: center"&gt;
-&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/smart-collector/2021-11-17-SM.jpg" alt=" " width="70%" /&gt;
+&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/smart-collector/2021-11-17-SM.jpg" alt=" " width="70%" /&gt;&lt;img src="https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/WP6/smart-collector/SM-06.jpeg" alt=" " width="70%" /&gt;
 &lt;p class="caption"&gt; &lt;/p&gt;
 &lt;/div&gt;
 ]
